<resources>
    <string name="app_name">Nose</string>
    <string name="title_activity_login">Sign in</string>
    <string name="password">Ingrese su contraseña</string>
    <string name="direccion">Ingrese su domicilio </string>
    <string name="telefono">Ingrese su telefono</string>
    <string name="RegCli">Registro de Cliente</string>
    <string name="RegLocal">Registro de Local</string>
    <string name="RegMenu">Registro de Menu</string>
    <string name="listaCli">Lista de Clientes</string>
    <string name="listaMenu">Lista de Menu</string>
    <string name="listaRegistros">Lista de Registros</string>
    <string name="welcome">Welcome </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Email invalido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">Contraseña Incorrecta</string>
    <string name="error_field_required">Campos Requeridos</string>
    <string name="registrar">¿No tienes cuenta? Registrate</string>
    <string name="usuario">Usuario</string>
    <string name="v_usuario">Falta ingresar usuario</string>
    <string name="v_clave">Falta ingresar clave</string>
    <!-- Strings de registrar -->
    <string name="newClient">Nuevo Cliente</string>
    <string name="nombresCli">Ingrese sus nombres</string>
    <string name="apellidosCli">Ingrese sus apellidos</string>
    <string name="ciCli">Numero de Cédula</string>
    <string name="emailCli">Ingrese su correo electronico</string>
    <string name="userCli">Ingrese su nombre de usuario</string>
    <!-- Strings de local -->
    <string name="newLocal">Nuevo Local</string>
    <string name="nombreLocal">Ingrese el nombre de su local</string>
    <string name="ruc">Ingrese su RUC</string>
    <!-- Strings de menu -->
    <string name="tipoMenu">Escoja el Tipo de Comida</string>
    <string name="precioMenu">Ingrese el precio</string>
    <string name="descripcionMenu">Descripción del plato</string>
    <string name="desayuno">Desayuno</string>
    <string name="Almuerzo">Almuerzo</string>
    <string name="Cena">Cena</string>
    <string name="Lunch">Lunch</string>
    <string name="EntreDia">Entre dia</string>
    <string name="cant">Cantidad</string>
    <string name="total">Total</string>
    <string name="descripcion">Esto es lo que lleva el plato</string>
    <string name="precio">Precio</string>
    <string name="title_activity_lista__menus">Menus</string>
    <string name="noseencontro">No se han encontrado menus</string>
    <!--Usuarios-->
    <string name="fecha">Fecha</string>
    <string name="sin_cli">No se encontraron clientes</string>


    <string name="action_settings">Settings</string>
    <string name="hola">Hola, </string>
    <string name="user">Nombre de Usuario</string>
    <string name="nombre">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="CI">Cedula de Identidad</string>
    <string name="correo">correo</string>
    <string name="title_activity_perfil_cliente">PerfilCliente</string>
    <string name="title_activity_generar_qr">GenerarQr</string>

    <!--Registros-->
    <string name="error_lis_re_cl">Error listar registros por Cliente</string>
    <string name="sin_regi">No se encontraron registros</string>
    <string name="title_activity_admin__lateral"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_cliente__lateral"> </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cantidad">Escoja la Cantidad de platos</string>
    <string name="reg">Rellene todos los campos.</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string-array name="cantidades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>
