<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context=".Cliente.ClienteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="@dimen/margen_30"
        android:background="#f5f6fa"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/viewuser" />

        <TextView
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/user"
            android:textSize="@dimen/letra18"/>


        <TextView
            android:id="@+id/txt_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="@color/RichGardenia"
            android:textSize="@dimen/letra22"
            android:layout_margin="@dimen/margen_10"/>

        <TextView
            android:id="@+id/txt_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellidos"
            android:textColor="@color/RichGardenia"
            android:textSize="@dimen/letra22"
            android:layout_margin="@dimen/margen_10"/>

        <TextView
            android:id="@+id/txt_cedulaCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ciCli"
            android:textColor="@color/RichGardenia"
            android:textSize="@dimen/letra22"
            android:layout_margin="@dimen/margen_10"/>

        <TextView
            android:id="@+id/txt_correoCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textColor="@color/RichGardenia"
            android:textSize="@dimen/letra22"
            android:layout_margin="@dimen/margen_10"/>


        <TextView
            android:id="@+id/txt_direccionCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:textColor="@color/RichGardenia"
            android:textSize="@dimen/letra22"
            android:layout_margin="@dimen/margen_10"/>

        <TextView
            android:id="@+id/txt_tlfCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:textColor="@color/RichGardenia"
            android:textSize="@dimen/letra22"
            android:layout_margin="@dimen/margen_10"/>

    </LinearLayout>
</RelativeLayout>