<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/texto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margen_20"
    android:background="@color/pineglade">

    <ImageView
        android:id="@+id/img_registros"
        android:layout_width="@dimen/menu_100"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen_15"
        android:layout_marginRight="@dimen/margen_15"
        android:layout_marginTop="@dimen/margen_10"
        android:src="@drawable/factura" />

    <TextView
        android:id="@+id/txt_fecha1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margen_20"
        android:layout_marginTop="@dimen/margen_5"
        android:layout_toRightOf="@id/img_registros"
        android:gravity="right"
        android:textColor="@color/royalBlue"
        android:text="@string/fecha"
        android:textSize="@dimen/letra18" />

    <TextView
        android:id="@+id/txt_nombres1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margen_20"
        android:layout_marginTop="@dimen/margen_35"
        android:layout_toRightOf="@id/img_registros"
        android:text="@string/nombre"
        android:textSize="@dimen/letra18" />

    <TextView
        android:id="@+id/txt_descripcion_m1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margen_20"
        android:layout_marginTop="@dimen/margin_login"
        android:layout_toRightOf="@id/img_registros"
        android:text="@string/descripcion"
        android:textSize="@dimen/letra18" />

    <TextView
        android:id="@+id/txt_cant1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margen_20"
        android:layout_marginTop="85dp"
        android:layout_toRightOf="@id/img_registros"
        android:text="@string/cant"
        android:gravity="right"
        android:textColor="@color/royalBlue"
        android:textSize="@dimen/letra18" />

    <TextView
        android:id="@+id/txt_precio1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margen_20"
        android:layout_marginTop="110dp"
        android:layout_toRightOf="@id/img_registros"
        android:text="@string/precio"
        android:gravity="right"
        android:textColor="@color/royalBlue"
        android:textSize="@dimen/letra18" />


    <TextView
        android:id="@+id/txt_valor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margen_20"
        android:layout_marginTop="135dp"
        android:layout_toRightOf="@id/img_registros"
        android:text="@string/total"
        android:gravity="center"
        android:textColor="@color/royalBlue"
        android:textSize="@dimen/letra18" />





</RelativeLayout>