<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blanco"
    android:theme="@style/AppTheme"
    android:orientation="vertical"
    tools:context=".Cliente.RegistrarCliente">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Registro de Cliente"
        android:textSize="25dp"
        android:layout_marginTop="60dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margen_30"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="30dp"
        android:background="#f5f6fa">


        <EditText
            android:id="@+id/txt_nombresCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/nombresCli"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginHorizontal="@dimen/margen_30"/>


        <EditText
            android:id="@+id/txt_apellidosCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/apellidosCli"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginHorizontal="@dimen/margen_30"/>

        <EditText
            android:id="@+id/txt_cedulaCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/ciCli"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginHorizontal="@dimen/margen_30"/>


        <EditText
            android:id="@+id/txt_correoCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/emailCli"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginHorizontal="@dimen/margen_30"/>


        <EditText
            android:id="@+id/txt_direccionCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/direccion"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginHorizontal="@dimen/margen_30"/>

        <EditText
            android:id="@+id/txt_tlfCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/telefono"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginHorizontal="@dimen/margen_30"/>

        <EditText
            android:id="@+id/txt_userCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/userCli"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginHorizontal="@dimen/margen_30"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/txt_passwordCli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginHorizontal="@dimen/margen_30"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_regCliente"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/margen_40"
            android:background="@color/beniukonBronze"
            android:text="Registrar"
            android:layout_margin="@dimen/margen_30"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
</ScrollView>